--- a/planet_fun.ipynb
+++ b/planet_fun.ipynb
@@ -115,14 +115,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "00be38e3-fa0f-476b-b4b7-0459268d25f9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "5b306596-d3f1-4a97-9413-401e25012d54",
    "metadata": {
@@ -355,8 +347,83 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eddac48-512b-4492-95f7-cbf0fbb8e26f",
+   "id": "ab9cfe78-8b16-4172-98ed-4c41f02e989d",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def square_root(x):\n",
+    "    return x**0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9ae57ff3-f5a7-42f5-a716-5d8cb2ad0242",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def square_root(x):\n",
+    "    return math.sqrt(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b875cb19-57fc-4f9f-a972-a469424406de",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def square_root(x):\n",
+    "    return x**(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7acb9c0c-bed1-4887-ba2e-7470f3d523a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def square_root(x):\n",
+    "    return math.sqrt(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "759a1631-7475-4222-9811-8b4904230086",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square_root(x):\n",
+    "    return x**0.5\n",
+    "\n",
+    "# Example usage:\n",
+    "print(square_root(9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5eddac48-512b-4492-95f7-cbf0fbb8e26f",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -366,9 +433,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "df7e831c-0d3e-4f07-911d-8728eb0fb8bb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -379,9 +448,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "a4dfca70-ca2e-4bd8-a19b-169f51abccc4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Here is a simple Python function that returns the square root of a given number:\n",
@@ -398,9 +469,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "64c63517-a615-4409-97d6-6b8f363fccbc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -411,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "8f80b7ce-7a7c-465d-bd4e-97aa11c7038e",
    "metadata": {},
    "outputs": [],
@@ -423,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "5b3b43c2-b017-4ba6-a64a-cec70c0276cf",
    "metadata": {},
    "outputs": [],
@@ -435,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "40c47f09-fb9e-4d49-bdbf-a0f6213de12e",
    "metadata": {},
    "outputs": [],
@@ -446,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "20afc637-aa6b-47bf-afdc-931a514189cb",
    "metadata": {
     "tags": []
@@ -459,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "a111705f-11d8-4dc1-9562-f2f70c398e0b",
    "metadata": {
     "tags": []
@@ -473,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "4fea1640-074b-40b3-952f-40ca12ce6af8",
    "metadata": {
     "tags": []
@@ -488,7 +561,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {
       "text/html": {
        "jupyter_ai": {
@@ -509,6 +582,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b5c9b62a-55b8-4e5c-9457-3f542da3637a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cube_root(x):\n",
+    "    return x**(1/3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5c4554ef-8112-4649-94ed-ec4c22545187",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def cube_root(x):\n",
+    "    return x**(1/3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3f642dbe-4484-4e93-85a7-76e59fd5f1c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cube_root(x):\n",
+    "    return x**(1/3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "9aa72af8-8fd4-4e61-83b1-28a3b074ce06",
    "metadata": {},
    "outputs": [],
@@ -520,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "8a325ca5-bf3c-48fd-a32b-5fb0f97dc31b",
    "metadata": {},
    "outputs": [],
@@ -531,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "83cbe466-8562-4a5f-b527-854cb5a05cf8",
    "metadata": {},
    "outputs": [],
@@ -548,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "ffe823af-7cd3-4a06-b55e-e7b74a9418b9",
    "metadata": {},
    "outputs": [],
@@ -561,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "ef32667a-954f-43a5-947a-f5c796b77250",
    "metadata": {},
    "outputs": [],
@@ -573,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "6bd17bc1-a617-46f3-9d26-86116ff60997",
    "metadata": {},
    "outputs": [],
@@ -584,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "79af202e-93f4-4f70-994f-f4965ee4c679",
    "metadata": {},
    "outputs": [],
@@ -595,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "785506e7-2f79-4e3e-a616-855a2dec9f4a",
    "metadata": {
     "tags": []
@@ -626,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "9af9de5a-d2e4-4ce8-9429-1d2dd0f6beab",
    "metadata": {
     "tags": []
@@ -641,7 +749,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {
       "text/html": {
        "jupyter_ai": {
@@ -661,7 +769,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
+   "id": "9fee9496-5488-432d-b02b-8a6204a70be7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    'Jayson Tatum': {\n",
+    "        '2017-2018': 13.9,\n",
+    "        '2018-2019': 15.7,\n",
+    "        '2019-2020': 23.4,\n",
+    "        '2020-2021': 26.4\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "highest_scoring_season = max(data['Jayson Tatum'], key=lambda x: data['Jayson Tatum'][x])\n",
+    "\n",
+    "highest_scoring_season"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "5ca9e262-826b-43e9-b6d8-60fcc763ffc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tatum_stats = [\n",
+    "    {\"season\": \"2017-2018\", \"points\": 1399},\n",
+    "    {\"season\": \"2018-2019\", \"points\": 1533},\n",
+    "    {\"season\": \"2019-2020\", \"points\": 1545},\n",
+    "    {\"season\": \"2020-2021\", \"points\": 1573}\n",
+    "]\n",
+    "\n",
+    "sorted_stats = sorted(tatum_stats, key=lambda x: x[\"points\"], reverse=True)\n",
+    "highest_scoring_season = sorted_stats[0][\"season\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c6b6c3d7-a60b-4934-a7bf-cc522ebe27d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of Jayson Tatum's seasons and their corresponding scores\n",
+    "seasons = [\n",
+    "    {\"season\": \"2017-2018\", \"score\": 13.9},\n",
+    "    {\"season\": \"2018-2019\", \"score\": 15.7},\n",
+    "    {\"season\": \"2019-2020\", \"score\": 23.4},\n",
+    "    {\"season\": \"2020-2021\", \"score\": 26.4}\n",
+    "]\n",
+    "\n",
+    "# Sorting the seasons based on score in descending order\n",
+    "sorted_seasons = sorted(seasons, key=lambda x: x[\"score\"], reverse=True)\n",
+    "\n",
+    "# Jayson Tatum's highest scoring season\n",
+    "highest_scoring_season = sorted_seasons[0][\"season\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "6b891fc9-658f-4f5f-b3f4-ebe93b36afe4",
    "metadata": {
     "tags": []
@@ -673,7 +842,7 @@
        "23"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
