--- a/planet_fun.ipynb
+++ b/planet_fun.ipynb
@@ -7,33 +7,10 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import dotenv\n",
-    "import openai\n",
-    "\n",
-    "dotenv.load_dotenv()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc8c071a-4913-4ad2-bfe2-2997ac75f7c3",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### OPEN API KEY LOAD SUCCESS"
+    "import os\n",
+    "import openai"
    ]
   },
   {
@@ -347,6 +324,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0e3d8311",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def square_root(x):\n",
+    "    return math.sqrt(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "ab9cfe78-8b16-4172-98ed-4c41f02e989d",
    "metadata": {},
    "outputs": [],
@@ -357,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "9ae57ff3-f5a7-42f5-a716-5d8cb2ad0242",
    "metadata": {},
    "outputs": [],
@@ -370,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "b875cb19-57fc-4f9f-a972-a469424406de",
    "metadata": {
     "tags": []
@@ -383,19 +372,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "7acb9c0c-bed1-4887-ba2e-7470f3d523a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def square_root(x):\n",
+    "    print(math.sqrt(x))\n",
     "    return math.sqrt(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "759a1631-7475-4222-9811-8b4904230086",
    "metadata": {
     "tags": []
@@ -419,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "5eddac48-512b-4492-95f7-cbf0fbb8e26f",
    "metadata": {
     "tags": []
@@ -433,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "df7e831c-0d3e-4f07-911d-8728eb0fb8bb",
    "metadata": {
     "tags": []
@@ -448,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "a4dfca70-ca2e-4bd8-a19b-169f51abccc4",
    "metadata": {
     "tags": []
@@ -469,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "64c63517-a615-4409-97d6-6b8f363fccbc",
    "metadata": {
     "tags": []
@@ -484,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "8f80b7ce-7a7c-465d-bd4e-97aa11c7038e",
    "metadata": {},
    "outputs": [],
@@ -496,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "5b3b43c2-b017-4ba6-a64a-cec70c0276cf",
    "metadata": {},
    "outputs": [],
@@ -508,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "40c47f09-fb9e-4d49-bdbf-a0f6213de12e",
    "metadata": {},
    "outputs": [],
@@ -519,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "20afc637-aa6b-47bf-afdc-931a514189cb",
    "metadata": {
     "tags": []
@@ -532,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "a111705f-11d8-4dc1-9562-f2f70c398e0b",
    "metadata": {
     "tags": []
@@ -546,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "4fea1640-074b-40b3-952f-40ca12ce6af8",
    "metadata": {
     "tags": []
@@ -561,7 +551,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {
       "text/html": {
        "jupyter_ai": {
@@ -582,6 +572,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7f6a7455",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cube_root(x):\n",
+    "    return x**(1/3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "b5c9b62a-55b8-4e5c-9457-3f542da3637a",
    "metadata": {},
    "outputs": [],
@@ -592,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "5c4554ef-8112-4649-94ed-ec4c22545187",
    "metadata": {
     "tags": []
@@ -605,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "3f642dbe-4484-4e93-85a7-76e59fd5f1c8",
    "metadata": {},
    "outputs": [],
@@ -616,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "9aa72af8-8fd4-4e61-83b1-28a3b074ce06",
    "metadata": {},
    "outputs": [],
@@ -628,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "8a325ca5-bf3c-48fd-a32b-5fb0f97dc31b",
    "metadata": {},
    "outputs": [],
@@ -639,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "83cbe466-8562-4a5f-b527-854cb5a05cf8",
    "metadata": {},
    "outputs": [],
@@ -656,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "ffe823af-7cd3-4a06-b55e-e7b74a9418b9",
    "metadata": {},
    "outputs": [],
@@ -669,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "ef32667a-954f-43a5-947a-f5c796b77250",
    "metadata": {},
    "outputs": [],
@@ -681,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "6bd17bc1-a617-46f3-9d26-86116ff60997",
    "metadata": {},
    "outputs": [],
@@ -692,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "79af202e-93f4-4f70-994f-f4965ee4c679",
    "metadata": {},
    "outputs": [],
@@ -703,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "785506e7-2f79-4e3e-a616-855a2dec9f4a",
    "metadata": {
     "tags": []
@@ -734,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "9af9de5a-d2e4-4ce8-9429-1d2dd0f6beab",
    "metadata": {
     "tags": []
@@ -749,7 +750,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {
       "text/html": {
        "jupyter_ai": {
@@ -770,9 +771,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fee9496-5488-432d-b02b-8a6204a70be7",
+   "id": "f0058d08",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "data = {\n",
+    "    'Jayson Tatum': [\n",
+    "        {\"Season\": \"2017-2018\", \"Points\": 13.9},\n",
+    "        {\"Season\": \"2018-2019\", \"Points\": 15.7},\n",
+    "        {\"Season\": \"2019-2020\", \"Points\": 23.4},\n",
+    "        {\"Season\": \"2020-2021\", \"Points\": 26.4}\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "highest_season = max(data['Jayson Tatum'], key=lambda x: x['Points'])\n",
+    "highest_season['Season']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "9fee9496-5488-432d-b02b-8a6204a70be7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2020-2021'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = {\n",
     "    'Jayson Tatum': {\n",
@@ -790,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "5ca9e262-826b-43e9-b6d8-60fcc763ffc5",
    "metadata": {},
    "outputs": [],
@@ -808,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "c6b6c3d7-a60b-4934-a7bf-cc522ebe27d8",
    "metadata": {},
    "outputs": [],
@@ -830,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "6b891fc9-658f-4f5f-b3f4-ebe93b36afe4",
    "metadata": {
     "tags": []
@@ -842,7 +874,7 @@
        "23"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
