--- a/planet_fun.ipynb
+++ b/planet_fun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "52f874a8-3abb-4ba3-ba3d-836c20776a2c",
    "metadata": {
     "tags": []
@@ -15,19 +15,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "8e0567bd-729a-424e-b84c-53220122020e",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The jupyter_ai_magics extension is already loaded. To reload it, use:\n",
+      "  %reload_ext jupyter_ai_magics\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext jupyter_ai_magics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "7c8b5913-5196-4994-9005-231895dfa229",
    "metadata": {
     "tags": []
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "id": "5b306596-d3f1-4a97-9413-401e25012d54",
    "metadata": {
     "tags": []
@@ -192,7 +201,7 @@
        "gpt4 - openai-chat:gpt-4\n"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "id": "1222a2d5-a06e-4031-aca0-bb224c44f540",
    "metadata": {
     "tags": []
@@ -216,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "id": "87e061c2-19ec-4010-9b40-8ab0123b104b",
    "metadata": {
     "tags": []
@@ -228,7 +237,7 @@
        "68.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "id": "6d6ab9da-9b59-4889-9224-dc641b10a144",
    "metadata": {
     "tags": []
@@ -254,7 +263,7 @@
        "32.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "id": "db2f9e40-5142-42a8-a338-8aa76093afe1",
    "metadata": {
     "tags": []
@@ -277,7 +286,7 @@
        "212.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "id": "07168748-aee2-4be8-bf73-e23f1ca974ab",
    "metadata": {
     "tags": []
@@ -303,7 +312,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 51,
      "metadata": {
       "text/html": {
        "jupyter_ai": {
@@ -324,6 +333,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "14c00c0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def square_root(x):\n",
+    "    return math.sqrt(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "0e3d8311",
    "metadata": {},
    "outputs": [],
@@ -335,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "id": "ab9cfe78-8b16-4172-98ed-4c41f02e989d",
    "metadata": {},
    "outputs": [],
@@ -346,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "id": "9ae57ff3-f5a7-42f5-a716-5d8cb2ad0242",
    "metadata": {},
    "outputs": [],
@@ -359,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "id": "b875cb19-57fc-4f9f-a972-a469424406de",
    "metadata": {
     "tags": []
@@ -372,15 +393,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "id": "7acb9c0c-bed1-4887-ba2e-7470f3d523a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
+    "\n",
     "def square_root(x):\n",
-    "    print(math.sqrt(x))\n",
-    "    return math.sqrt(x)"
+    "    if x < 0:\n",
+    "        raise ValueError(\"Input must be a non-negative number\")\n",
+    "    try:\n",
+    "        return math.sqrt(x)\n",
+    "    except ValueError as e:\n",
+    "        print(f\"Error calculating square root: {e}\")\n",
+    "\n",
+    "# Example usage\n",
+    "try:\n",
+    "    result = square_root(16)\n",
+    "    print(result)\n",
+    "except ValueError as e:\n",
+    "    print(e)\n",
+    "\n",
+    "    # return math.sqrt(x)"
    ]
   },
   {
